k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-docker-proxy
  labels:
    app: vault-docker-proxy
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: vault-docker-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: vault-docker-proxy-lb
  labels:
    app: vault-docker-proxy
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: vault-docker-proxy
